[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True
omit = site-packages

[isort]
known_first_party = aiocassandra
known_third_party = async_generator,cassandra,pytest

[tool:pytest]
addopts = -s --keep-duplicates --cache-clear --verbose --no-cov-on-fail --cov=aiocassandra --cov-report=term --cov-report=html
